# asent

./: .buildinfo  .cookiecutter.json  .cruft.json  .darglint  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  asent.component.html  asent.data_classes.html  asent.getters.html  asent.utils.html  asent.visualize.html  asent_tutorial.ipynb  citation.cff  customizing.html  demo.py  faq.html  genindex.html  index.html  installation.html  introduction.html  lang.danish.html  lang.emoji.html  lang.english.html  lang.norwegian.html  lang.swedish.html  languages.html  makefile  model_workings.html  news.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  (+6 more)
.doctrees/: asent.component.doctree  asent.data_classes.doctree  asent.getters.doctree  asent.utils.doctree  asent.visualize.doctree  customizing.doctree  environment.pickle  faq.doctree  index.doctree  installation.doctree  introduction.doctree  lang.danish.doctree  lang.emoji.doctree  lang.english.doctree  lang.norwegian.doctree  lang.swedish.doctree  languages.doctree  model_workings.doctree  news.doctree
.github/: dependabot.yml  release_drafter.yml
.github/ISSUE_TEMPLATE/: 01_bugs.md  config.yml
.github/workflows/: black_formatter.yml  check_for_rej.yml  cruft.yml  dependabot_automerge.yml  documentation.yml  pre-commit.yml  publish_to_pypi.yml  pytest-cov-comment.yml  release.yml  run_ipynb.yml  run_tutorials.yml  stale.yml  static_type_checks.yml  tests.yml
Benchmarks/: benchmark.py  benchmark_da.py  convert_to_matches.py  new_funcs.py  requirements.txt  test.py  todo.md
_modules/: index.html
_modules/asent/: component.html  data_classes.html  getters.html  utils.html  visualize.html
_modules/asent/lang/: da.html  emoji.html  en.html  no.html  se.html
_sources/: asent.component.rst.txt  asent.visualize.rst.txt  customizing.rst.txt  faq.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  lang.english.rst.txt  lang.swedish.rst.txt  languages.rst.txt  model_workings.rst.txt  news.rst.txt
_sources/tutorials/: customizing_your_pipeline.ipynb.txt  introduction.ipynb.txt
_static/: documentation_options.js
asent/: __init__.py  about.py  colorizer.py  component.py  constants.py  data_classes.py  getters.py  utils.py  visualize.py
asent/lang/: __init__.py  autoconstructed.py  da.py  emoji.py  en.py  no.py  se.py  sv.py
asent/lexicons/: af_lexicon_chen_skiena_2014_v1.txt  an_lexicon_chen_skiena_2014_v1.txt  ar_lexicon_chen_skiena_2014_v1.txt  az_lexicon_chen_skiena_2014_v1.txt  be_lexicon_chen_skiena_2014_v1.txt  bg_lexicon_chen_skiena_2014_v1.txt  bn_lexicon_chen_skiena_2014_v1.txt  br_lexicon_chen_skiena_2014_v1.txt  bs_lexicon_chen_skiena_2014_v1.txt  ca_lexicon_chen_skiena_2014_v1.txt  cs_lexicon_chen_skiena_2014_v1.txt  cy_lexicon_chen_skiena_2014_v1.txt  da_lexicon_chen_skiena_2014_v1.txt  da_lexicon_sentida_lemma_v1.csv  de_lexicon_chen_skiena_2014_v1.txt  el_lexicon_chen_skiena_2014_v1.txt  emoji_v1.json  eo_lexicon_chen_skiena_2014_v1.txt  es_lexicon_chen_skiena_2014_v1.txt  et_lexicon_chen_skiena_2014_v1.txt  eu_lexicon_chen_skiena_2014_v1.txt  fa_lexicon_chen_skiena_2014_v1.txt  fi_lexicon_chen_skiena_2014_v1.txt  fo_lexicon_chen_skiena_2014_v1.txt  fr_lexicon_chen_skiena_2014_v1.txt  fy_lexicon_chen_skiena_2014_v1.txt  ga_lexicon_chen_skiena_2014_v1.txt  gd_lexicon_chen_skiena_2014_v1.txt  gl_lexicon_chen_skiena_2014_v1.txt  gu_lexicon_chen_skiena_2014_v1.txt  he_lexicon_chen_skiena_2014_v1.txt  hi_lexicon_chen_skiena_2014_v1.txt  hr_lexicon_chen_skiena_2014_v1.txt  ht_lexicon_chen_skiena_2014_v1.txt  hu_lexicon_chen_skiena_2014_v1.txt  hy_lexicon_chen_skiena_2014_v1.txt  ia_lexicon_chen_skiena_2014_v1.txt  id_lexicon_chen_skiena_2014_v1.txt  io_lexicon_chen_skiena_2014_v1.txt  is_lexicon_chen_skiena_2014_v1.txt  (+46 more)
asent/tests/: test_components.py  test_data_classes.py  test_getters.py  test_lexicon.py  test_utils.py  test_visualize.py
descriptions/: da_v1.md  emoji_v1.md  no_v1.md  se_v1.md
dev/: add_new_language.py  emoji_sentiment_creator.py
dev/pytest-coverage/: .coveragerc  run_coverage.py
docs/: asent.component.rst  asent.data_classes.rst  asent.getters.rst  asent.utils.rst  asent.visualize.rst  conf.py  customizing.rst  faq.rst  index.rst  introduction.rst  lang.norwegian.rst  languages.rst  news.rst  requirements.txt
docs/languages/: index.rst  lang.danish.rst  lang.emoji.rst
docs/tutorials/: Analysis_of_trump_speech.ipynb  analysis_of_a_speech.ipynb  introduction.ipynb  requirements.txt  trump_speech.txt
prodigy/: angrytweets.jsonl  angrytweets_annotated.jsonl  da_match_patterns_corrected.jsonl  dataset_maker.py  project.yml
src/asent/: __init__.py  about.py  component.py  data_classes.py  getters.py  utils.py  visualize.py
src/asent/lang/: __init__.py  autoconstructed.py  da.py  emoji.py  en.py  no.py  sv.py  xx.py
src/asent/lexicons/: an_lexicon_chen_skiena_2014_v1.txt  ar_lexicon_chen_skiena_2014_v1.txt  az_lexicon_chen_skiena_2014_v1.txt  be_lexicon_chen_skiena_2014_v1.txt  br_lexicon_chen_skiena_2014_v1.txt  bs_lexicon_chen_skiena_2014_v1.txt  da_lexicon_afinn_v1.txt  el_lexicon_chen_skiena_2014_v1.txt  es_lexicon_chen_skiena_2014_v1.txt  fa_lexicon_chen_skiena_2014_v1.txt  fo_lexicon_chen_skiena_2014_v1.txt  fr_lexicon_chen_skiena_2014_v1.txt  ga_lexicon_chen_skiena_2014_v1.txt  gd_lexicon_chen_skiena_2014_v1.txt  gl_lexicon_chen_skiena_2014_v1.txt  gu_lexicon_chen_skiena_2014_v1.txt  he_lexicon_chen_skiena_2014_v1.txt  hr_lexicon_chen_skiena_2014_v1.txt  ht_lexicon_chen_skiena_2014_v1.txt  io_lexicon_chen_skiena_2014_v1.txt  is_lexicon_chen_skiena_2014_v1.txt  km_lexicon_chen_skiena_2014_v1.txt  no_lexicon_v1.txt  (+18 more)
tests/: requirements.txt  test_all_langs.py  test_bugs.py  test_component.py  test_data_classes.py  test_getters.py  test_utils.py  test_visualize.py
tutorials/: Analysis_of_trump_speech.html  analysis_of_a_speech.html  customizing_your_pipeline.html  customizing_your_pipeline.ipynb  introduction.html  introduction.ipynb  requirements.txt
